# wt-custom-events

./: .gitattributes  .gitignore  LICENSE  README.md  layout.json  spec.yaml  test-cases.yaml  wt-compiler-env-overrides.toml
.github/workflows/: ci.yml
__results_snapshots__/all-events/: test_dashboard_json[data].json  test_dashboard_json[nodata].json
__results_snapshots__/weekly-bar-chart/: test_dashboard_json[data].json  test_dashboard_json[nodata].json
custom-events-tasks/src/custom_events_tasks/: __init__.py  _add_event_status_group.py  _filter_events_by_state.py
docs/: generate_technical_guide.py  technical_guide.md
ecoscope-workflows-custom-events-workflow/: Dockerfile  README.md  VERSION.yaml  pixi.toml  pyproject.toml
ecoscope-workflows-custom-events-workflow/custom-events-tasks/: pyproject.toml
ecoscope-workflows-custom-events-workflow/custom-events-tasks/src/custom_events_tasks/: _add_event_status_group.py
ecoscope-workflows-custom-events-workflow/ecoscope_workflows_custom_events_workflow/: cli.py
ecoscope-workflows-custom-events-workflow/tests/: conftest.py  test_metadata.py
wt-custom-events-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
wt-custom-events-workflow/tests/: conftest.py  test_metadata.py
wt-custom-events-workflow/wt_custom_events_workflow/: cli.py  params.json  rjsf.json
wt-custom-events-workflow/wt_custom_events_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
